# CineTCG

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_FORMATS.md  ETHICAL_MONETIZATION.md
scripts/: ci.ps1  ci.sh
src/cinetcg/: __main__.py  paths.py
src/cinetcg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cinetcg/client/pygame_app/: app.py  asset_manager.py  cutscene_player.py  main.py  scene_base.py  ui.py
src/cinetcg/client/pygame_app/scenes/: boot.py  collection.py  decks.py  main_menu.py  match.py  settings.py  shop.py
src/cinetcg/data/: cards.json  cutscenes.json  products.json
src/cinetcg/data/schemas/: cards.schema.json  cutscenes.schema.json  products.schema.json
src/cinetcg/engine/: __init__.py  actions.py  ai.py  match.py  serialize.py  types.py
src/cinetcg/services/: __init__.py  billing.py  content.py  inventory.py  telemetry.py
tests/: conftest.py  test_determinism.py  test_engine_rules.py  test_schema_validation.py
tools/: generate_placeholder_assets.py
